--- a/index.html
+++ b/index.html
@@ -142,6 +142,160 @@
         </div>
       </div>
     </section>
+    <!-- Content page three -->
+    <section class="section-pg3 gap-3" id="section-pg3">
+      <div class="container">
+        <div class="row d-flex align-items-center justify-content-evenly">
+          <!-- Card One -->
+          <div
+            class="card col-md-3 align-items-center text-center"
+            style="width: 14rem; height: 18rem"
+          >
+            <img
+              src="./Images/president-gowthamkumar.jpg"
+              class="card-img-top"
+              alt="BOD"
+              style="width: 12rem; height: 14rem"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Rtr. Harini Velusamy <br />
+                Vise-President
+              </p>
+            </div>
+          </div>
+          <!-- Card Two -->
+          <div
+            class="card col-md-3 align-items-center text-center"
+            style="width: 14rem; height: 18rem"
+          >
+            <img
+              src="./Images/president-gowthamkumar.jpg"
+              class="card-img-top"
+              alt="BOD"
+              style="width: 12rem; height: 14rem"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Rtr. Harini Velusamy <br />
+                Vise-President
+              </p>
+            </div>
+          </div>
+          <!-- Card three -->
+          <div
+            class="card col-md-3 align-items-center text-center"
+            style="width: 14rem; height: 18rem"
+          >
+            <img
+              src="./Images/president-gowthamkumar.jpg"
+              class="card-img-top"
+              alt="BOD"
+              style="width: 12rem; height: 14rem"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Rtr. Harini Velusamy <br />
+                Vise-President
+              </p>
+            </div>
+          </div>
+          <!-- Card four -->
+          <div
+            class="card col-md-3 align-items-center text-center"
+            style="width: 14rem; height: 18rem"
+          >
+            <img
+              src="./Images/president-gowthamkumar.jpg"
+              class="card-img-top"
+              alt="BOD"
+              style="width: 12rem; height: 14rem"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Rtr. Harini Velusamy <br />
+                Vise-President
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- Bottom -->
+        <div class="row d-flex align-items-center justify-content-evenly">
+          <!-- Card One -->
+          <div
+            class="card col-md-3 align-items-center text-center"
+            style="width: 14rem; height: 18rem"
+          >
+            <img
+              src="./Images/president-gowthamkumar.jpg"
+              class="card-img-top"
+              alt="BOD"
+              style="width: 12rem; height: 14rem"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Rtr. Harini Velusamy <br />
+                Vise-President
+              </p>
+            </div>
+          </div>
+          <!-- Card Two -->
+          <div
+            class="card col-md-3 align-items-center text-center"
+            style="width: 14rem; height: 18rem"
+          >
+            <img
+              src="./Images/president-gowthamkumar.jpg"
+              class="card-img-top"
+              alt="BOD"
+              style="width: 12rem; height: 14rem"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Rtr. Harini Velusamy <br />
+                Vise-President
+              </p>
+            </div>
+          </div>
+          <!-- Card three -->
+          <div
+            class="card col-md-3 align-items-center text-center"
+            style="width: 14rem; height: 18rem"
+          >
+            <img
+              src="./Images/president-gowthamkumar.jpg"
+              class="card-img-top"
+              alt="BOD"
+              style="width: 12rem; height: 14rem"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Rtr. Harini Velusamy <br />
+                Vise-President
+              </p>
+            </div>
+          </div>
+          <!-- Card four -->
+          <div
+            class="card col-md-3 align-items-center text-center"
+            style="width: 14rem; height: 18rem"
+          >
+            <img
+              src="./Images/president-gowthamkumar.jpg"
+              class="card-img-top"
+              alt="BOD"
+              style="width: 12rem; height: 14rem"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Rtr. Harini Velusamy <br />
+                Vise-President
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
