--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       </div>
     </section>
     <!-- Content page Two -->
-    <section class="container-fluid section-pg2" id="section-pg2">
+    <!-- <section class="container-fluid section-pg2" id="section-pg2">
       <div class="card" style="width: 18rem; height: 520px">
         <img
           src="./Images/president-gowthamkumar.jpg"
@@ -141,9 +141,12 @@
           <p class="card-text">Secretary 2023 - 2024</p>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Content page three -->
-
+    <section class="board">
+      <img src="./Images/pres.jpg" alt="Pres" class="sec-3-img" />
+      <img src="./Images/sec.jpg" alt="Pres" class="sec-3-img" />
+    </section>
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
