--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         >
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#pageOne">Home</a>
+              <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#section-pg2">Commanders</a>
@@ -115,7 +115,7 @@
       </div>
     </section>
     <!-- Content page Two -->
-    <!-- <section class="container-fluid section-pg2" id="section-pg2">
+    <section class="container-fluid section-pg2" id="section-pg2">
       <div class="card" style="width: 18rem; height: 520px">
         <img
           src="./Images/president-gowthamkumar.jpg"
@@ -124,7 +124,7 @@
           style="height: 390px"
         />
         <div class="card-body">
-          <h5 class="card-title">Rtr. Gowtham Kumar Ramalingam</h5>
+          <h5 class="card-title">Rtr. Gowtham Kumar</h5>
           <p class="card-text">President 2023 - 2024</p>
         </div>
       </div>
@@ -137,16 +137,12 @@
         />
         <div class="card-body">
           <h5 class="card-title">Rtr. Ragul Ram Udaya Giri</h5>
-          <hr style="width: 1px" />
           <p class="card-text">Secretary 2023 - 2024</p>
         </div>
       </div>
-    </section> -->
-    <!-- Content page three -->
-    <section class="board">
-      <img src="./Images/pres.jpg" alt="Pres" class="sec-3-img" />
-      <img src="./Images/sec.jpg" alt="Pres" class="sec-3-img" />
     </section>
+    <!-- Content page three -->
+    <section class="board"></section>
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
