--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="./Images/nav-logo.jpg" alt="Royals ESD" class="logo" />
+          <img src="./Images/black-white.jpg" alt="Royals ESD" class="logo" />
         </a>
         <button
           class="navbar-toggler"
@@ -105,7 +105,11 @@
     <!-- Content page One -->
     <section class="section-pg1 container-fluid" id="pageOne">
       <div class="secOne-left">
-        <img src="./Images/nav-logo.jpg" alt="RR Sword" class="club-logo" />
+        <img
+          src="./Images/Tirupur Royals Logo Formation1234567890-01 (1) (1).jpg"
+          alt="RR Sword"
+          class="club-logo"
+        />
       </div>
       <div class="secOne-right">
         <h1 class="heading-sec">
