--- a/index.html
+++ b/index.html
@@ -146,7 +146,92 @@
       </div>
     </section>
     <!-- Content page three -->
-    <section class="board"></section>
+    <section class="boardOfDirec">
+      <div
+        class="row row-cols-1 row-cols-md-4 row-cols-sm-4 g-4 extra-card card-group"
+      >
+        <div class="col align-items-center justify-content-center">
+          <div class="card g-5 p-4" style="width: 16rem; height: 14rem">
+            <h3 class="card-title">Rtr. Harini</h3>
+            <h5 class="card-subtitle text-muted">Vice President</h5>
+            <p class="card-text">
+              She's an aspiring young and ever charming and proud member, she's
+              been DRS of RID-3203
+            </p>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card g-5 p-4" style="width: 16rem; height: 14rem">
+            <h3 class="card-title">Rtr. Santhosh</h3>
+            <h5 class="card-subtitle text-muted">Treasurer</h5>
+            <p class="card-text">
+              He's an aspiring young and ever charming and proud member, he is
+              doing PG Eng
+            </p>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card g-5 p-4" style="width: 16rem; height: 14rem">
+            <h3 class="card-title">Rtr. Aakash</h3>
+            <h5 class="card-subtitle text-muted">Sergeant At Arms</h5>
+            <p class="card-text">
+              He's an aspiring young and ever charming and proud member
+            </p>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card g-5 p-4" style="width: 16rem; height: 14rem">
+            <h3 class="card-title">Rtr. Nivetha</h3>
+            <h5 class="card-subtitle text-muted">Club Service Director</h5>
+            <p class="card-text">
+              He's an aspiring young and ever charming and proud member
+            </p>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card g-5 p-4" style="width: 16rem; height: 14rem">
+            <h3 class="card-title">Rtr. Murali</h3>
+            <h5 class="card-subtitle text-muted">Community Service Director</h5>
+            <p class="card-text">
+              He's an aspiring young and ever charming and proud member
+            </p>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card g-5 p-4" style="width: 16rem; height: 14rem">
+            <h3 class="card-title">Rtr. Nagaraj</h3>
+            <h5 class="card-subtitle text-muted">
+              Professional Service Director
+            </h5>
+            <p class="card-text">
+              He's an aspiring young and ever charming and proud member
+            </p>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card g-5 p-4" style="width: 16rem; height: 14rem">
+            <h3 class="card-title">Rtr. Videsh</h3>
+            <h5 class="card-subtitle text-muted">
+              International Service Director
+            </h5>
+            <p class="card-text">
+              He's an aspiring young and ever charming and proud member
+            </p>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card g-5 p-4" style="width: 16rem; height: 14rem">
+            <h3 class="card-title">Rtr. Bala</h3>
+            <h5 class="card-subtitle text-muted">
+              Rotary foundation & Membership Chair
+            </h5>
+            <p class="card-text">
+              He's an aspiring young and ever charming and proud member
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
