Half way commit

--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
               <a class="nav-link" href="#section-pg2">Commanders</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Directors</a>
+              <a class="nav-link" href="#boardOfDirec">Directors</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Members</a>
+              <a class="nav-link" href="#members">Members</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="#aboutus">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Updates</a>
+              <a class="nav-link" href="#updates">Updates</a>
             </li>
           </ul>
           <ul class="navbar-nav justify-content-end">
@@ -146,92 +146,70 @@
       </div>
     </section>
     <!-- Content page three -->
-    <section class="boardOfDirec">
-      <div
-        class="row row-cols-1 row-cols-md-4 row-cols-sm-4 g-4 extra-card card-group"
-      >
-        <div class="col align-items-center justify-content-center">
-          <div class="card g-5 p-4" style="width: 16rem; height: 14rem">
-            <h3 class="card-title">Rtr. Harini</h3>
-            <h5 class="card-subtitle text-muted">Vice President</h5>
-            <p class="card-text">
-              She's an aspiring young and ever charming and proud member, she's
-              been DRS of RID-3203
-            </p>
-          </div>
+    <section class="boardOfDirec" id="boardOfDirec">
+      <h1 class="h1 board-heading">Our Proud Board</h1>
+      <div class="card-boxes">
+        <div class="card" style="width: 22rem">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+              <h4 class="card-title">Rtr. Harini</h4>
+              <h6 class="text-muted">Vice President</h6>
+            </li>
+            <li class="list-group-item">
+              <h4 class="card-title">Rtr. Santhosh</h4>
+              <h6 class="text-muted">Treasurer</h6>
+            </li>
+            <li class="list-group-item">
+              <h4 class="card-title">Rtr. Aakash</h4>
+              <h6 class="text-muted">Sergeant At Arms</h6>
+            </li>
+            <li class="list-group-item">
+              <h4 class="card-title">Rtr. Nivetha</h4>
+              <h6 class="text-muted">Club Service Director</h6>
+            </li>
+          </ul>
         </div>
-        <div class="col">
-          <div class="card g-5 p-4" style="width: 16rem; height: 14rem">
-            <h3 class="card-title">Rtr. Santhosh</h3>
-            <h5 class="card-subtitle text-muted">Treasurer</h5>
-            <p class="card-text">
-              He's an aspiring young and ever charming and proud member, he is
-              doing PG Eng
-            </p>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card g-5 p-4" style="width: 16rem; height: 14rem">
-            <h3 class="card-title">Rtr. Aakash</h3>
-            <h5 class="card-subtitle text-muted">Sergeant At Arms</h5>
-            <p class="card-text">
-              He's an aspiring young and ever charming and proud member
-            </p>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card g-5 p-4" style="width: 16rem; height: 14rem">
-            <h3 class="card-title">Rtr. Nivetha</h3>
-            <h5 class="card-subtitle text-muted">Club Service Director</h5>
-            <p class="card-text">
-              He's an aspiring young and ever charming and proud member
-            </p>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card g-5 p-4" style="width: 16rem; height: 14rem">
-            <h3 class="card-title">Rtr. Murali</h3>
-            <h5 class="card-subtitle text-muted">Community Service Director</h5>
-            <p class="card-text">
-              He's an aspiring young and ever charming and proud member
-            </p>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card g-5 p-4" style="width: 16rem; height: 14rem">
-            <h3 class="card-title">Rtr. Nagaraj</h3>
-            <h5 class="card-subtitle text-muted">
-              Professional Service Director
-            </h5>
-            <p class="card-text">
-              He's an aspiring young and ever charming and proud member
-            </p>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card g-5 p-4" style="width: 16rem; height: 14rem">
-            <h3 class="card-title">Rtr. Videsh</h3>
-            <h5 class="card-subtitle text-muted">
-              International Service Director
-            </h5>
-            <p class="card-text">
-              He's an aspiring young and ever charming and proud member
-            </p>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card g-5 p-4" style="width: 16rem; height: 14rem">
-            <h3 class="card-title">Rtr. Bala</h3>
-            <h5 class="card-subtitle text-muted">
-              Rotary foundation & Membership Chair
-            </h5>
-            <p class="card-text">
-              He's an aspiring young and ever charming and proud member
-            </p>
-          </div>
+        <div class="card" style="width: 22rem">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+              <h4 class="card-title">Rtr. Murali</h4>
+              <h6 class="text-muted">Community Service Director</h6>
+            </li>
+            <li class="list-group-item">
+              <h4 class="card-title">Rtr. Nagaraj</h4>
+              <h6 class="text-muted">Professional Service Director</h6>
+            </li>
+            <li class="list-group-item">
+              <h4 class="card-title">Rtr. Videsh</h4>
+              <h6 class="text-muted">International Service Director</h6>
+            </li>
+            <li class="list-group-item">
+              <h4 class="card-title">Rtr. Bala</h4>
+              <h6 class="text-muted">Rotary foundation & Membership Chair</h6>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
+    <!-- Members -->
+    <section class="members" id="members"></section>
+    <!-- About us -->
+    <section class="aboutus" id="aboutus"></section>
+    <!-- Updates -->
+    <section class="updates" id="updates"></section>
+    <footer>
+      <h6>Designed and Developed by</h6>
+      <h5>Ragul Ram Udaya Giri</h5>
+      <div class="foo-anch">
+        <p>For queries</p>
+        <a
+          href="https://www.instagram.com/the_aesthetic_alien_/"
+          class="foo-anchor"
+        >
+          <i class="fa-brands fa-instagram spl"></i>
+        </a>
+      </div>
+    </footer>
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
