--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <a class="navbar-brand" href="#">
           <img src="./Images/black-white.jpg" alt="Royals ESD" class="logo" />
         </a>
+        <button></button>
         <button
           class="navbar-toggler"
           type="button"
