--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           <img src="./Images/black-white.jpg" alt="Royals ESD" class="logo" />
         </a>
         <button></button>
+        <a href="#"></a>
         <button
           class="navbar-toggler"
           type="button"
